--- a/app/src/main/res/layout/activity_sign_in_up.xml
+++ b/app/src/main/res/layout/activity_sign_in_up.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_button"
         android:ems="10"
-        android:hint="username"
+        android:hint="@string/email"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/email_field"
         android:ems="10"
-        android:hint="password"
+        android:hint="@string/password"
         android:inputType="textPassword" />
 
 
