--- a/app/src/main/res/layout/activity_subscribe.xml
+++ b/app/src/main/res/layout/activity_subscribe.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.rezadiscount.rezadiscount.reza.discount.activities.SubscribeActivity">
+    tools:context=".reza.discount.activities.SignUpActivity">
 
 
     <EditText
