--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -77,6 +77,14 @@
             android:text="@string/female"/>
     </RadioGroup>
 
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gender_radio" />
+
+
     <Button
         android:id="@+id/subscribe"
         android:layout_width="fill_parent"
