--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/splash_screen_root"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/red0"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -46,7 +48,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/red4"
         android:text="@string/connexion_button"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/inscription"
@@ -56,7 +58,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/red4"
         android:text="@string/subscribe_button"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
 
     <Button
