--- a/app/src/main/res/layout/best_deal_fragment.xml
+++ b/app/src/main/res/layout/best_deal_fragment.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reza.discount.activities.CustomDealFragment">
+    tools:context=".reza.discount.activities.FragmentCustomDeal">
     <!-- A RecyclerView with some commonly used attributes -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 </RelativeLayout>
