--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".reza.discount.activities.CustomDealFragment">
+    tools:context=".reza.discount.activities.FragmentCategory">
     <!-- A RecyclerView with some commonly used attributes -->
 
     <android.support.v7.widget.RecyclerView
